[package]
name = "superdev-challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bs58 = "0.5.1"
serde_json = "1.0.140"
solana-program = "2.3.0"
solana-sdk = "2.3.1"
spl-token = "8.0.0"
tokio = {version = "1.45.1", features = ["full"]}
serde = { version = "1.0.193", features = ["derive"] }
base64 = "0.22.1"
